# elmulator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  Package.swift  README.md  SECURITY.md  SPEC.md  action.yml  llms.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-pypi.yml
Sources/Elmulator/: BundledScenarios.swift  FakeELMScenario.swift  FakeELMScenarioEngine.swift  ScanSummaryMatching.swift  Scenario+Bundled.swift  Scenario.swift  ScenarioEngine.swift
Sources/ElmulatorBLE/: AdapterProfile.swift  BLEConnectionStateMachine.swift  BLETransportError.swift  CentralStack.swift  ConnectionError.swift  ConnectionStateMachine.swift  CoreBluetoothStack.swift  Deprecations.swift
Sources/ElmulatorBLETestSupport/: Deprecations.swift  FakeBLEStack.swift  FakeCentral.swift
Sources/ElmulatorCoreBluetoothMock/: ElmulatorMockPeripheral.swift
Sources/ElmulatorTCP/: FakeELMTCPServer.swift  TCPServer.swift
Sources/ElmulatorTestSupport/: Client.swift  Conversation.swift
Sources/elmulator-ble/: PeripheralHost.swift  main.swift
Sources/elmulator-tcp/: main.swift
Tests/ElmulatorBLETests/: BLEStateMachineTests.swift  FakeBLEStackTests.swift
Tests/ElmulatorTests/: DXTests.swift  EngineTests.swift
assets/: README.md  demo.tape
conformance/: README.md  run_conformance.py
docs/: README.md  elmulator-vs-elm327-emulator.md  faq.md  getting-started.md  mock-elm327-over-bluetooth.md  roadmap.md  swift-package.md  testing-obd2-apps-in-ci.md  testing-swiftobd2.md
examples/ios-ci/: Package.swift  (+1 more)
python/: README.md  pyproject.toml
python/src/elmulator/: __init__.py  _bundled.py  cli.py  client.py  server.py  summary.py  validate.py
python/tests/: test_smoke.py
scenarios/: README.md  adapter_disconnect.scenario.json  chunked_stream.scenario.json  headers_off_echo_on.scenario.json  malformed.scenario.json  no_codes_basic.scenario.json  p0301_basic.scenario.json  p0420_basic.scenario.json
scripts/: build_bundled.py
spec/: obd2.sim_scenario.v1.schema.json
swift/: Package.swift  README.md
(+10 files in other folders)
