[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elmulator"
version = "0.3.1"
description = "A scriptable Bluetooth LE and TCP OBD2 (ELM327) adapter emulator and CI test harness."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "elmulator contributors" }]
keywords = ["obd2", "elm327", "emulator", "bluetooth", "ble", "automotive", "testing", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Emulators",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/qadanm/elmulator"
Repository = "https://github.com/qadanm/elmulator"
Specification = "https://github.com/qadanm/elmulator/blob/main/SPEC.md"

[project.scripts]
elmulator = "elmulator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/elmulator"]
